# aioshlink-py

./: pyproject.toml
shlink/api/http/: http_client.py
shlink/api/http/http_requests/: __init__.py  domain.py  health.py  integration.py  short_urls.py  tags.py  visits.py
shlink/client/: client.py
shlink/client/http/: domain.py  health.py  integration.py  short_urls.py  tags.py  visits.py
shlink/client/utils/: converters.py
shlink/models/: __init__.py  domain.py  integration.py  short.py  status.py  tag.py  visits.py
